--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 # Set Java home for Gradle
-org.gradle.java.home=D\:\\JDK
+#org.gradle.java.home=D\:\\JDK
 # 临时注释掉，让Gradle自动检测JDK
